# latent-search

./: .env.example  .gitignore  README.md  manage  manage.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: lint.yml  test.yml  typecheck.yml
docs/: plan.md
src/latent_search/: __init__.py
src/latent_search/server/config/: settings.py  urls.py
src/latent_search/server/indexing/: apps.py  urls.py
src/latent_search/server/indexing/management/commands/: enrich_captions.py  index_media.py  setup_qdrant.py
src/latent_search/server/indexing/migrations/: 0001_initial.py  0002_indexedmedia_latitude_indexedmedia_longitude.py  0003_indexedmedia_caption.py  0004_add_vlm_caption.py
src/latent_search/server/indexing/models/: __init__.py  media.py
src/latent_search/server/indexing/services/: __init__.py  clip.py  discovery.py  exif.py  geocoding.py  indexing.py  query_parser.py  search.py  text_embedding.py  vector_db.py  vlm.py
src/latent_search/server/indexing/static/indexing/: style.css
src/latent_search/server/indexing/templates/indexing/: _error_fragment.html  _results_fragment.html  dashboard.html
src/latent_search/server/indexing/tests/: __init__.py  test_clip.py  test_discovery.py  test_geocoding.py  test_indexing.py  test_media.py  test_query_parser.py  test_search.py  test_search_integration.py  test_search_view.py  test_text_embedding.py  test_vector_db.py  test_vlm.py  test_vlm_integration.py
src/latent_search/server/indexing/views/: __init__.py  search_view.py
src/latentsearch/server/config/: settings.py
